Finshed positioning elements -Need to work on the positioning elements better -Opening New Branch to explore different results

--- a/index.html
+++ b/index.html
@@ -11,26 +11,36 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./assets/css/card-component.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Outfit:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/card-component.css" />
     <title>Frontend Mentor | NFT preview card component</title>
-
   </head>
   <body>
     <div class="card-body">
-      
-        <img class="mainImage" src="./images/image-equilibrium.jpg" alt="Image of Equilibrium" />
-      
+      <img
+        class="mainImage"
+        src="./images/image-equilibrium.jpg"
+        alt="Image of Equilibrium"
+      />
 
       <h1>Equilibrium #3429</h1>
 
       <p>Our Equilibrium collection promotes balance and calm.</p>
 
       <div class="littleStuff">
-        <p> <img src="./images/icon-ethereum.svg" alt="Ethereum"> 0.041 ETH</p>
-        <p> <img src="./images/icon-clock.svg" alt="Clock"> 3 days left</p>
+        <p><img src="./images/icon-ethereum.svg" alt="Ethereum" /> 0.041 ETH</p>
+        <p><img src="./images/icon-clock.svg" alt="Clock" /> 3 days left</p>
       </div>
 
-      <p> <img src="./images/image-avatar.png" alt="Headshot"> Creation of Jules Wyvern</p>
+      <p class="creator">
+        <img class="headShot" src="./images/image-avatar.png" alt="Headshot" />
+        <span>Creation of</span> Jules Wyvern
+      </p>
 
       <div class="attribution">
         Challenge by
