--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Outfit:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/card-component.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/card-component.css" /> -->
+    <link rel="stylesheet" href="./assets/css/designTwo.css">
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
@@ -37,6 +38,8 @@
         <p><img src="./images/icon-clock.svg" alt="Clock" /> 3 days left</p>
       </div>
 
+      <div class="line"></div>
+      
       <p class="creator">
         <img class="headShot" src="./images/image-avatar.png" alt="Headshot" />
         <span>Creation of</span> Jules Wyvern
