Mobile View Complete -Changed the width and font-size of some elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" href="./assets/css/card-component.css" /> -->
-    <link rel="stylesheet" href="./assets/css/designTwo.css">
+    <link rel="stylesheet" href="./assets/css/designTwo.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="line"></div>
-      
+
       <p class="creator">
         <img class="headShot" src="./images/image-avatar.png" alt="Headshot" />
         <span>Creation of</span> Jules Wyvern
