Updated file to use percentages to make repitious code go away.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
   </head>
   <body>
     <div class="card-body">
-      <img
-        class="mainImage"
-        src="./images/image-equilibrium.jpg"
-        alt="Image of Equilibrium"
-      />
-
-      <h1>Equilibrium #3429</h1>
+      <div class="images">
+        <img
+          class="mainImage"
+          src="./images/image-equilibrium.jpg"
+          alt="Image of Equilibrium"
+        />
+        <img src="./images/icon-view.svg" alt="" class="imgTwo" />
+      </div>
+      <h1><span>Equilibrium #3429</span></h1>
 
       <p>Our Equilibrium collection promotes balance and calm.</p>
 
@@ -38,11 +40,11 @@
         <p><img src="./images/icon-clock.svg" alt="Clock" /> 3 days left</p>
       </div>
 
-      <div class="line"></div>
+      <hr class="line"></hr>
 
       <p class="creator">
         <img class="headShot" src="./images/image-avatar.png" alt="Headshot" />
-        <span>Creation of</span> Jules Wyvern
+        <span>Creation of</span> <span id="name">Jules Wyvern</span> 
       </p>
 
       <div class="attribution">
