Finished Styling and Positioning elements on the project -Added image-overlay and transitions -CSS positioning/stylings added in both desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="card-body">
-      <div class="images">
+      <div class="images-container">
         <img
           class="mainImage"
           src="./images/image-equilibrium.jpg"
